--- a/proj.android/res/values/strings.xml
+++ b/proj.android/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">cococo</string>
+    <string name="app_name">in_the_sand</string>
 </resources>
